--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <header>
     <h1>SafeDrive Driving School</h1>
     <nav>
+      <a href="#hero">Home</a>
       <a href="#services">Services</a>
+      <a href="#testimonials">Testimonials</a>
+      <a href="#faq">FAQ</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="hero">
     <h2>Learn to Drive Safely</h2>
     <p>Professional, certified instructors. Flexible timing. Affordable prices.</p>
     <a href="#contact" class="btn">Book a Lesson</a>
@@ -28,7 +31,24 @@
       <li>Beginner Driving Lessons</li>
       <li>Refresher Courses</li>
       <li>Road Test Preparation</li>
+      <li>Defensive Driving Techniques</li>
     </ul>
+  </section>
+
+  <section id="testimonials">
+    <h2>Student Testimonials</h2>
+    <blockquote>"I passed on my first try! The instructors are amazing." – Alex</blockquote>
+    <blockquote>"Very professional and supportive. Highly recommend!" – Maria</blockquote>
+  </section>
+
+  <section id="faq">
+    <h2>Frequently Asked Questions</h2>
+    <dl>
+      <dt>How do I schedule a lesson?</dt>
+      <dd>Use the contact form below or call us directly.</dd>
+      <dt>What are your lesson rates?</dt>
+      <dd>We offer competitive packages starting from $30/hour.</dd>
+    </dl>
   </section>
 
   <section id="about">
